# pytorch-playground

./: README.md  getting_started.ipynb  pyproject.toml
0-LeNet1/: yann_lecunn_1989.ipynb
1-AlexNet/: AlexNet.ipynb  README.md
LeNet1/: README.md
